# thai-bank-parser

./: .gitignore  LICENSE  OFFLINE.md  PRIVACY.md  README.md  pyproject.toml  requirements.lock.txt
examples/: synthetic_rows.md
scripts/: build_offline_bundle.ps1  build_portable_windows.ps1  install_offline.ps1
src/thai_bank_parser/: __init__.py  categorized.py  cli.py  io.py  models.py  ocr.py  registry.py  template.py  ui.py  validation.py
src/thai_bank_parser/templates/: __init__.py  krungsri.py
templates/: README.md
tests/: test_categorized.py  test_cli_ui.py  test_krungsri_template.py  test_ocr_device.py  test_registry.py  test_validation.py
