[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "thai-bank-parser"
version = "0.1.0"
description = "Local-first OCR parser for Thai bank statement PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hanzu Tech" }]
keywords = ["bank-statement", "ocr", "csv", "thai-bank", "krungsri"]
dependencies = [
  "pillow>=10",
  "pypdfium2>=4.18",
  "rapidocr-onnxruntime>=1.4.4",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
thai-bank-parser = "thai_bank_parser.cli:app"
tbp = "thai_bank_parser.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/thai_bank_parser"]
